--- a/src/app/features/fms/components/receipt-capture/receipt-capture.component.html
+++ b/src/app/features/fms/components/receipt-capture/receipt-capture.component.html
@@ -1,12 +1,40 @@
 <div class="container">
-  <div class="breadcrumb-custom">
+  <!-- Main Form -->
+  <div class="row me-4">
+    <div class="col-8">
+      <app-dynamic-breadcrumb
+        [breadCrumbItems]="[
+      {
+        label: 'FMS',
+        url: '/home/fms',
+      },
+      {
+        label:  this.translate.instant('fms.receipting.cbReceipting'),
+        url: '/home/fms/',
+      },
+      {
+        label: this.translate.instant('fms.receipting.receipting'),
+        url: '/home/fms/',
+      },
+      {
+        label: this.translate.instant('fms.receipting.receiptCapture'),
+        url: ''
+      }
+    ]"
+      >
+      </app-dynamic-breadcrumb>
+    </div>
+  </div>
+
+  <!-- <div class="breadcrumb-custom">
     {{ "fms.receipting.finance" | translate }} >
     {{ "fms.receipting.cbReceipting" | translate }}>
     {{ "fms.receipting.receipting" | translate }}>
     <span class="breadcrumb-text">{{
       "fms.receipting.receiptCapture" | translate
     }}</span>
-  </div>
+  </div> -->
+
   <!-- Main Form -->
   <div class="main-form">
     <!-- <div class="scroll-container bg-white" > -->
@@ -168,7 +196,7 @@
           <label for="documentDate" class="form-label">{{
             "fms.receipting.document_date" | translate
           }}</label
-          ><span *ngIf="requireDocumentField" class="required"></span>
+          ><span *ngIf="makeFieldRequired" class="required"></span>
           <div class="date-input">
             <input
               type="date"
