--- a/src/app/features/gis/components/quotation/components/quote-summary/quote-summary.component.html
+++ b/src/app/features/gis/components/quotation/components/quote-summary/quote-summary.component.html
@@ -176,7 +176,7 @@
                   class="btn btn-primary"
                   title="Delete"
                   (click)="openRiskDeleteModal()"
-                  [disabled]="quotationDetails?.riskInformation?.length <= 1">
+                  [disabled]="!quotationDetails?.quotationProducts?.[0]?.riskInformation || quotationDetails.quotationProducts[0].riskInformation.length <= 1">
                   <i class="fa-solid fa-trash-can"></i>
                 </button>
               </div>
