added multilingual features

--- a/src/app/features/fms/components/base-fms/base-fms.component.html
+++ b/src/app/features/fms/components/base-fms/base-fms.component.html
@@ -63,7 +63,7 @@
           <div class="col-12 mb-3 col-md-3">
             <div class="card fixed-height-card hover-effect">
               <div class="card-header bg-transparent header">
-                General Ledger
+                {{ "base.General Ledger" | translate }}
               </div>
               <div class="card-body">
                 <div class="custom-list list">
@@ -109,7 +109,9 @@
           </div>
           <div class="col-12 mb-3 col-md-3">
             <div class="card fixed-height-card hover-effect">
-              <div class="card-header bg-transparent">CashBook</div>
+              <div class="card-header bg-transparent">
+                {{ "base.Cashbook" | translate }}
+              </div>
               <div class="card-body">
                 <div class="custom-list list">
                   <div
@@ -154,7 +156,9 @@
           </div>
           <div class="col-12 mb-3 col-md-3">
             <div class="card fixed-height-card hover-effect">
-              <div class="card-header bg-transparent">Creditors</div>
+              <div class="card-header bg-transparent">
+                {{ "base.Creditors" | translate }}
+              </div>
               <div class="card-body">
                 <div class="custom-list list">
                   <div
@@ -199,7 +203,9 @@
           </div>
           <div class="col-12 mb-3 col-md-3">
             <div class="card fixed-height-card hover-effect">
-              <div class="card-header bg-transparent">Debtors</div>
+              <div class="card-header bg-transparent">
+                {{ "base.Debtors" | translate }}
+              </div>
               <div class="card-body">
                 <div class="custom-list list">
                   <div
