--- a/src/app/features/fms/components/client-allocation/client-allocation.component.html
+++ b/src/app/features/fms/components/client-allocation/client-allocation.component.html
@@ -8,7 +8,7 @@
         url: '/home/fms',
       },
       {
-        label: this.translate.instant('fms.cbReceipting'),
+        label: this.translate.instant('fms.receipting.cbReceipting'),
         url: '/home/fms/',
       },
       {
