--- a/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.html
+++ b/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.html
@@ -24,10 +24,13 @@
           <div class="form-group form-group-sm">
             <br>
             <label for="minmax-buttons" id="quote-label">{{'gis.quotation.product' | translate}}</label>
-            <select class="form-select form-control-sm " id="quote-dropdown" formControlName="productCode">
+            <!-- <select class="form-select form-control-sm " id="quote-dropdown" formControlName="productCode">
               <option value="">{{productDescription |sentenceCase}}</option>
 
-            </select>
+            </select> -->
+            <p-dropdown formControlName="productCode" [options]="productList" optionLabel="description"
+            [filterBy]="'description'" [filter]="true"
+           ></p-dropdown>
           
           </div>
         </div>
@@ -38,7 +41,7 @@
               translate}}</label>
             <p-dropdown formControlName="subclassCode" [options]="allMatchingSubclasses" optionLabel="description"
               [filterBy]="'description'" [filter]="true"
-              (onChange)="onSubclassSelected($event);loadSubclassSectionCovertype();"></p-dropdown>
+              (onChange)="onSubclassSelected($event);"></p-dropdown>
 
           </div>
         </div>
@@ -48,7 +51,7 @@
             <br>
             <label for="minmax-buttons" id="quote-label"> {{'gis.quotation.vehicle_make' | translate}}</label>
              
-            <p-dropdown [options]="vehicleMakeList" optionLabel="name" [filterBy]="'name'" [filter]="true"
+            <p-dropdown formControlName="vehicleMake" [options]="vehicleMakeList" optionLabel="name" [filterBy]="'name'" [filter]="true"
               (onChange)="onVehicleMakeSelected($event);"></p-dropdown>
           </div>
         </div>
@@ -56,7 +59,7 @@
           <div class="form-group form-group-sm">
             <br>
             <label for="minmax-buttons" id="quote-label"> {{'gis.quotation.vehicle_model' | translate}}</label>
-            <p-dropdown [options]="vehicleModelDetails" optionLabel="name" [filterBy]="'name'" [filter]="true"
+            <p-dropdown formControlName="vehicleModel" [options]="vehicleModelDetails" optionLabel="name" [filterBy]="'name'" [filter]="true"
               (onChange)="onVehicleModelSelected($event);"></p-dropdown>
           </div>
         </div>
@@ -135,8 +138,9 @@
             <label for="" id="quote-label"> {{'gis.quotation.cover_from' | translate}}</label>
             <p-calendar formControlName="wef" name="wef" id="coverFromDate" inputId="coverFromDate"
               [dateFormat]="dateFormat" inputStyleClass='form-control' [showIcon]="true"
-              (onSelect)="updateCoverToDate($event)" [minDate]="minDate" [ngModel]="passedCoverFromDate">
+              (onSelect)="updateCoverToDate($event)" [minDate]="minDate" >
             </p-calendar>
+            
           </div>
         </div>
         <div class="col-sm-4 col-6">
@@ -145,7 +149,7 @@
             <label for="" id="quote-label"> {{'gis.quotation.cover_to' | translate}}</label>
             <p-calendar formControlName="wet" name="wet" id="coverToDate" inputId="coverToDate"
               [dateFormat]="dateFormat" inputStyleClass='form-control' [showIcon]="true" [minDate]="minDate"
-              [ngModel]="passedCoverToDate">
+              >
             </p-calendar>
           </div>
         </div>
@@ -976,7 +980,7 @@
                   <input type="text" placeholder="Search" id="search-input-Rsection" [(ngModel)]="searchText" />
                 </div>
                 <div class="scrollable-list">
-                  <div *ngFor="let section of filteredMandatorySections">
+                  <div *ngFor="let section of sectionPremium">
                     <!-- Add a check to see if the section matches the search text -->
                     <div class="form-check" *ngIf="matchesSearch(section.sectionShortDescription)">
                       <input class="form-check-input" type="checkbox" [id]="'checkbox-' + section.code"
