--- a/src/app/features/crm/components/service-desk/request-status/request-status.component.html
+++ b/src/app/features/crm/components/service-desk/request-status/request-status.component.html
@@ -23,9 +23,11 @@
     </div>
     <div class="card border-0">
       <div class="card-header bg-transparent float-start border-bottom-0">
-        <h6 class="float-start mt-3 fw-semibold">{{'serviceDesk.serviceRequestStatus' | translate}}</h6>
         <div class="row mb-3">
-          <div class="col-12">
+          <div class="col-sm-12 col-md-6 d-flex justify-content-lg-start">
+            <h6 class="my-3 fw-semibold">{{'serviceDesk.serviceRequestStatus' | translate}}</h6>
+          </div>
+          <div class="col-sm-12 col-md-6 d-flex justify-content-lg-end">
             <div class="float-end">
               <span class="icon-circle"
               ><i class="fa-solid fa-plus" (click)="openServiceRequestStatusModal()"></i
@@ -67,16 +69,16 @@
 
           <ng-template pTemplate="header">
             <tr>
-              <th pSortableColumn="srsMainStatus">{{'serviceDesk.mainStatus'| translate }} <p-sortIcon field="srsMainStatus"></p-sortIcon></th>
-              <th pSortableColumn="srsShortDescription">{{'serviceDesk.shortDescription'| translate }} <p-sortIcon field="srsShortDescription"></p-sortIcon></th>
               <th pSortableColumn="srsName">{{'serviceDesk.statusName'| translate }} <p-sortIcon field="srsName"></p-sortIcon></th>
+              <th pSortableColumn="srsShortDescription">{{'serviceDesk.shortDescription'| translate }} <p-sortIcon field="srsShortDescription"></p-sortIcon></th>
+              <th pSortableColumn="srsMainStatus">{{'serviceDesk.mainStatus'| translate }} <p-sortIcon field="srsMainStatus"></p-sortIcon></th>
             </tr>
           </ng-template>
           <ng-template pTemplate="body" let-requestStatus>
             <tr [pSelectableRow]="requestStatus">
-              <td>{{requestStatus?.srsMainStatus | titlecase}}</td>
-              <td>{{requestStatus?.srsShortDescription | titlecase}}</td>
               <td>{{requestStatus?.srsName | titlecase}}</td>
+              <td>{{requestStatus?.srsShortDescription | titlecase}}</td>
+              <td>{{requestStatus?.srsMainStatus | titlecase}}</td>
             </tr>
           </ng-template>
           <ng-template pTemplate="emptymessage">
@@ -113,7 +115,7 @@
         <form [formGroup]="serviceRequestStatusForm">
           <div class="row my-3">
             <div class="col-md-6">
-              <label for="name" class="form-label">Name</label>
+              <label for="name" class="form-label">{{ 'serviceDesk.name' | translate }}</label>
               <input
                 type="text"
                 class="form-control"
@@ -122,7 +124,7 @@
               />
             </div>
             <div class="col-md-6">
-              <label for="shtDesc" class="form-label">Short Description</label>
+              <label for="shtDesc" class="form-label">{{ 'serviceDesk.shortDescription' | translate }}</label>
               <input
                 type="text"
                 class="form-control"
@@ -131,7 +133,7 @@
               />
             </div>
             <div class="col-md-6">
-              <label for="status" class="form-label">Main status</label>
+              <label for="status" class="form-label">{{ 'serviceDesk.mainStatus' | translate }}</label>
               <select class="form-select" id="status" formControlName="status">
                 <option  *ngFor="let status of mainStatusData"
                   [value]="status">{{status}}</option>
@@ -143,7 +145,7 @@
 
       </div>
       <div class="modal-footer border-top-0">
-        <button type="button" class="btn btn-primary" (click)="saveServiceRequestStatus()">Save details</button>
+        <button type="button" class="btn btn-primary" (click)="saveServiceRequestStatus()">{{ 'serviceDesk.saveDetails' | translate }}</button>
       </div>
     </div>
   </div>
