--- a/src/app/features/crm/components/service-desk/request-tracking/request-tracking.component.html
+++ b/src/app/features/crm/components/service-desk/request-tracking/request-tracking.component.html
@@ -23,10 +23,12 @@
     </div>
     <div class="card border-0">
       <div class="card-header bg-transparent float-start border-bottom-0">
-        <h6 class="float-start my-3 fw-semibold">{{'serviceDesk.serviceRequestTracking' | translate}}</h6>
 
         <form [formGroup]="requestTrackingForm">
-          <div class="row col-lg-12 pb-2">
+          <div class="row mb-3">
+            <div class="col-sm-12 d-flex justify-content-lg-start">
+              <h6 class="my-3 fw-semibold">{{'serviceDesk.serviceRequestTracking' | translate}}</h6>
+            </div>
             <div class="col-lg-2 col-sm-4 col-6">
               <label class="float-start">{{ 'serviceDesk.requestStatus' | translate }}:</label><br>
               <select class="form-select"  formControlName="status">
